# homeiq-sim

./: .gitignore  .python-version  LICENSE  Makefile  README.md  pyproject.toml
examples/: config.full.yaml  config.small.yaml  scenario.demo.yaml
src/homeiq_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/homeiqsim/: simulator.py
src/homeiqsim/api/: __init__.py  rest.py  services.py  websocket.py
src/homeiqsim/behaviors/: __init__.py  base.py  binary_sensor.py  climate.py  cover.py  light.py  media_player.py  occupancy.py  sensor.py  switch.py
src/homeiqsim/cli/: generate.py  serve.py  summarize.py  validate.py
src/homeiqsim/config/: distributions.yaml  holidays_us_2025.yaml  profiles.yaml  regions.yaml
src/homeiqsim/core/: daylight.py  rng.py  timebase.py  weather.py
src/homeiqsim/io/: manifest.py  schema.py  write_jsonl.py  write_parquet.py
src/homeiqsim/model/: devices.py  entities.py  profiles.py  regions.py
src/homeiqsim/runtime/: __init__.py  clock.py  loop.py  state.py
src/homeiqsim/synth/: events.py  faults.py  labels.py
tests/: test_events.py  test_profiles.py  test_regions.py  test_schema.py
